crates/node/tests/it/gas/snapshots/it__gas__tip20_channel_reserve__tip20_channel_reserve_gas_snapshot_t7.snap
---
source: crates/node/tests/it/gas/tip20_channel_reserve.rs
expression: gas
---
close_existing_channel_after_settlement: 80713
close_existing_channel_no_prior_settlement: 80713
open_new_channel_existing_reserve_balance: 298625
open_new_channel_first_reserve_balance: 797925
open_new_channel_with_storage_credit: 60025
request_close_existing_channel: 30123
settle_existing_channel_existing_payee_balance: 301631
settle_existing_channel_new_payee_balance: 561971
top_up_existing_channel: 46805
top_up_existing_channel_cancel_close_request: 48680
