crates/node/tests/it/gas/snapshots/it__gas__tip20_channel_reserve__tip20_channel_reserve_lifecycle_gas_snapshot_t7.snap
---
source: crates/node/tests/it/gas/tip20_channel_reserve.rs
assertion_line: 418
expression: gas
---
close_after_settlement_earn_credit:
  gas: 82963
  storage_credits: 0 -> 1
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
close_without_prior_settlement_earn_credit:
  gas: 82963
  storage_credits: 0 -> 1
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
open_channel_existing_reserve_balance:
  gas: 300194
  storage_credits: 0 -> 0
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
open_different_payer_after_credit:
  gas: 550194
  storage_credits: "payer: 1 -> 1; other: 0 -> 0"
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
open_first_channel_from_wallet:
  gas: 799494
  storage_credits: 0 -> 0
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
open_original_payer_after_cross_user:
  gas: 62475
  storage_credits: "payer: 1 -> 0; other: 0 -> 0"
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
open_same_payer_reuse_close_credit:
  gas: 62475
  storage_credits: 1 -> 0
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
request_close_existing_channel:
  gas: 30111
  storage_credits: 0 -> 0
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
settle_existing_channel_existing_payee_balance:
  gas: 301619
  storage_credits: 0 -> 0
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
settle_existing_channel_new_payee_balance:
  gas: 312671
  storage_credits: 0 -> 0
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
top_up_existing_channel:
  gas: 46793
  storage_credits: 0 -> 0
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
top_up_existing_channel_cancel_close_request:
  gas: 48668
  storage_credits: 0 -> 0
  pooled_storage_credits: "Reserve TIP-1060: 0 -> 0"
